welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:30: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:43: error: Unmatched closing brace '}' ignored here
    		}else{
                ^